[package]
name = "voxelize-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
voxelize = "1.0.0"
actix-web = "4.5.1"
specs = { version = "0.20.0", features = ["specs-derive", "serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
async-stream = "0.3"
dotenvy = "0.15"
actix-ws = "0.3"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
